no fixed on mobile

--- a/themes/kuaka/src/css/_styles.css
+++ b/themes/kuaka/src/css/_styles.css
@@ -91,6 +91,7 @@ blockquote p:before{
   transition: 1.8s;
   @media (max-width:40em){
     background-size: auto 100vh !important;
+    position: absolute;
   }
 }
 
